--- a/test.html
+++ b/test.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		test
+		<title>SAMple Rep</title>
 	</head>
 	<body>
-		....
+		"subukan mong magmahal... o giliw koo~ kakaibang, ligayang matatamooo~"
 	</body>
 
 
